@@ -192,3 +192,4 @@
 - API: new method "createRoot" in SplitDockStation, allows clients to use their own roots.
 - API: new method "setResizingEnabled" in SplitDockStation
 - Layout: when a picture of a Dockable is needed, that contains AWT-components, different AWTComponentCaptureStrategies can be used
+! API: MultiColorProviderFactory renamed to MultiColorBridgeFactory
